syntax = "proto3";

package Renewals;

option csharp_namespace = "BizCover.Application.Renewals";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service RenewalsService {

	// Generate renewal order for expiring policy
	// - Automatically generates offer, quotation, cart and order from the expiring policy details
	// - Expiring policy must eligible for renewal
	// - If a previously generated by auto-renewal order exists, it is returned instead of generating a new order
	rpc GenerateOrder (GenerateOrderRequest) returns (GenerateOrderResponse);
	
	// Returns policy renewal eligibility status (as bool)
	rpc IsEligibleForRenewal (IsEligibleForRenewalRequest) returns (IsEligibleForRenewalResponse);

	// Returns policy renewal eligibility status for requote renewal
	rpc IsEligibleForReQuoteRenewal (IsEligibleForReQuoteRenewalRequest) returns (IsEligibleForReQuoteRenewalResponse);

	// Return policy renewal eligibility details
	rpc GetRenewalEligibilityDetails (GetRenewalEligibilityDetailsRequest) returns (GetRenewalEligibilityDetailsResponse);
	
	// Submit renewal order for exipiring policy
	// - Submit renewal order by exipiring policyId and OrderId
	// - Expiring policy must eligible for renewal
	rpc SubmitRenewalOrder (SubmitRenewalOrderRequest) returns (SubmitRenewalOrderResponse);
	
	rpc GetRenewalDetails (GetRenewalDetailsRequest) returns (GetRenewalDetailsResponse);
	
	rpc GetRenewalPolicyDetails (GetRenewalPolicyDetailsRequest) returns (GetRenewalPolicyDetailsResponse);
	
	rpc GetRenewalDetailsForExpiringPolicy (GetRenewalDetailsForExpiringPolicyRequest) returns (GetRenewalDetailsForExpiringPolicyResponse);
	
	rpc UpdateAutoRenewalEligibility (UpdateAutoRenewalEligibilityRequest) returns (google.protobuf.Empty);
	
	rpc UpdateAutoRenewalOptInFlag(UpdateAutoRenewalOptInFlagRequest) returns (google.protobuf.Empty);
	
	rpc UpdateEnableAllRenewalFlag(UpdateEnableAllRenewalFlagRequest) returns (google.protobuf.Empty);

	rpc UpdateSpecialCircumstances(UpdateSpecialCircumstancesRequest) returns (google.protobuf.Empty);

	rpc GetWordingChangeUrl(GetWordingChangeUrlRequest) returns (GetWordingChangeUrlResponse);
}

message GenerateOrderRequest {
    string ExpiringPolicyId = 1;
}

message GenerateOrderResponse {
	oneof Result {
		.Renewals.SuccessDto Success = 1;
		.Renewals.FailedDto Failed = 2;
	}
}

message FailedDto {
	string Message = 1;
}

message SuccessDto {
	string OrderId = 1;		
}

message IsEligibleForRenewalRequest{
	string ExpiringPolicyId = 1;
}

message IsEligibleForRenewalResponse{
	bool IsEligible = 1;
	string Reason = 2;
}

message GetRenewalEligibilityDetailsRequest{
	string ExpiringPolicyId = 1;
}

message GetRenewalEligibilityDetailsResponse{
	bool IsEligible = 1;
	string Reason = 2;
	RenewalFlags Flags = 3;
}

message RenewalFlags {
	bool HasAlreadyRenewed = 1;
	bool AutoRenewalOptIn = 2;
}

message SubmitRenewalOrderRequest{
	string ExpiringPolicyId = 1;	
	string OrderId = 2;
}

message SubmitRenewalOrderResponse {
	oneof Result {
		.Renewals.SuccessDto Success = 1;
		.Renewals.FailedDto Failed = 2;
	}
}

message GetRenewalDetailsRequest{
	string OrderId = 1;	
}

message GetRenewalDetailsResponse{
	string OrderId = 1;	
	string ExpiringPolicyId = 2;
}

message GetRenewalPolicyDetailsRequest{
	string PolicyId = 1;	
}

message GetRenewalPolicyDetailsResponse{
	RenewalDto OldPolicy = 1;
	RenewalDto NewPolicy = 2;
}

message GetRenewalDetailsForExpiringPolicyRequest{
	string ExpiringPolicyId = 1;	
}

message GetRenewalDetailsForExpiringPolicyResponse {
	string ExpiringPolicyId = 1;
	string ProductCode = 2;
	string PolicyStatus = 3;
	string OrderId = 4;
	google.protobuf.Timestamp PolicyExpiryDate = 5;
	google.protobuf.Timestamp PolicyInceptionDate = 6;
	RenewalDatesDto RenewalDates = 7;
	AutoRenewalEligibilityDto AutoRenewalEligibility= 8;
	bool OptIn = 9; //optin Auto renewal
	bool HasArrears = 10;
	string RenewalType = 11;
	string RenewedPolicyId = 12;
	google.protobuf.Timestamp RenewedDate = 13;
	SpecialCircumstancesDto SpecialCircumstances = 14;
	bool EnableAllRenewal = 15;
}

message RenewalDatesDto
{
	google.protobuf.Timestamp Initiation = 1;
	google.protobuf.Timestamp Initiated = 2;
	google.protobuf.Timestamp OrderGeneration = 3;
	google.protobuf.Timestamp OrderGenerated = 4;
	google.protobuf.Timestamp OrderSubmission = 5;
	google.protobuf.Timestamp OrderSubmitted = 6;
}

message AutoRenewalEligibilityDto
{
	bool IsEligible = 1;
	string Comments = 2;
	google.protobuf.Timestamp UpdatedAt = 3;
}

message SpecialCircumstancesDto
{
	bool IsApplied = 1;
	string Comments = 2;
	google.protobuf.Timestamp UpdatedAt = 3;
	string Reason = 4;
	string SecondLevelReason = 5;
}

message UpdateAutoRenewalEligibilityRequest{
    string ExpiringPolicyId = 1;
    bool IsEligible = 2;
    string Comments = 3;
}

message UpdateAutoRenewalOptInFlagRequest {
    string ExpiringPolicyId = 1;
    bool OptIn = 2;
}

message UpdateEnableAllRenewalFlagRequest {
    string ExpiringPolicyId = 1;
    bool Enable = 2;
}

message UpdateSpecialCircumstancesRequest{
	string ExpiringPolicyId = 1;
	bool IsApplied = 2;
	string Comments = 3;
	string Reason = 4; // must be  "Insurer Request" / "Claim" / "IT Bug"
	string SecondLevelReason = 5;
}

message RenewalDto {
	string ExpiringPolicyId = 1;
	string ProductCode = 2;
	string PolicyStatus = 3;
	string OrderId = 4;
	google.protobuf.Timestamp PolicyExpiryDate = 5;
	google.protobuf.Timestamp PolicyInceptionDate = 6;
	RenewalDatesDto RenewalDates = 7;
	AutoRenewalEligibilityDto AutoRenewalEligibility= 8;
	bool OptIn = 9; //optin Auto renewal
	bool HasArrears = 10;
	string RenewalType = 11;
	string RenewedPolicyId = 12;
	google.protobuf.Timestamp RenewedDate = 13;
	SpecialCircumstancesDto SpecialCircumstances = 14;
	bool EnableAllRenewal = 15;
}

message GetWordingChangeUrlRequest {
	string ProductCode = 1;
	google.protobuf.Timestamp EffectiveDate = 2;
}

message GetWordingChangeUrlResponse {
	string Url = 1;
}

message IsEligibleForReQuoteRenewalRequest{
	string ExpiringPolicyId = 1;	
}

message IsEligibleForReQuoteRenewalResponse{
	bool IsEligible = 1;
	string Reason = 2;	
}
